fixed z-index positioning of canvas and sticky nav

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,8 @@ html, body, p, div, h1, h2, h3, nav {
     z-index: 1;
     width: 100%;
     height: 500px;
+    position: relative;
+    z-index: 3;
   }
   
   .splash {
@@ -74,11 +76,17 @@ html, body, p, div, h1, h2, h3, nav {
   	padding-top: 30px;
   }
 
+  .sticky-wrapper {
+    position: relative;
+    z-index: 5;
+  }
+
   .stuck {
     position:fixed;
     top:0;
     box-shadow:0 2px 4px rgba(0, 0, 0, .3);
     width: 100%;
+    z-index: 5;
   }
 
   p {
